// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update label on legacy controls tui-input preserves HTML label content and keeps existing placeholder on inner <input tuiTextfieldLegacy>: test.html 1`] = `
{
  "0. Before": "
                    <tui-input
                        [style.max-width.rem]="30"
                        [(ngModel)]="value"
                    >
                        <strong>&pi;</strong>
                        -value
                        <input
                            inputmode="decimal"
                            placeholder="3,141..."
                            tuiTextfieldLegacy
                            [maskito]="maskitoOptions"
                        />
                    </tui-input>
                ",
  "1. After": "
                    <tui-textfield [style.max-width.rem]="30">
                    <label tuiLabel><strong>&pi;</strong> -value</label>
                    <input
                            inputmode="decimal"
                            placeholder="3,141..."
                            tuiInput
                            [maskito]="maskitoOptions" [(ngModel)]="value"/>
                    </tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-input preserves HTML label content and keeps existing placeholder on inner <input tuiTextfieldLegacy>: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;

exports[`ng-update label on legacy controls tui-input preserves plain text label and keeps existing placeholder on inner <input tuiTextfieldLegacy>: test.html 1`] = `
{
  "0. Before": "
                    <tui-input
                        [style.max-width.rem]="30"
                        [(ngModel)]="value"
                    >
                        Japanese yen
                        <input
                            inputmode="decimal"
                            placeholder="¥1,2345,6789"
                            tuiTextfieldLegacy
                            [maskito]="maskitoOptions"
                        />
                    </tui-input>
                ",
  "1. After": "
                    <tui-textfield [style.max-width.rem]="30">
                    <label tuiLabel>Japanese yen</label>
                    <input
                            inputmode="decimal"
                            placeholder="¥1,2345,6789"
                            tuiInput
                            [maskito]="maskitoOptions" [(ngModel)]="value"/>
                    </tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-input preserves plain text label and keeps existing placeholder on inner <input tuiTextfieldLegacy>: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;

exports[`ng-update label on legacy controls tui-input preserves plain text label when inner <input tuiTextfieldLegacy> has no placeholder: test.html 1`] = `
{
  "0. Before": "
                    <tui-input
                        [style.max-width.rem]="20"
                        [(ngModel)]="value"
                    >
                        Enter number

                        <input
                            tuiTextfieldLegacy
                            [maskito]="maskitoOptions"
                            (change)="log($event)"
                        />
                    </tui-input>
                ",
  "1. After": "
                    <tui-textfield [style.max-width.rem]="20">
                    <label tuiLabel>Enter number</label>
                    <input
                            tuiInput
                            [maskito]="maskitoOptions"
                            (change)="log($event)" [(ngModel)]="value"/>
                    </tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-input preserves plain text label when inner <input tuiTextfieldLegacy> has no placeholder: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;

exports[`ng-update label on legacy controls tui-input-date preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.html 1`] = `
{
  "0. Before": "
                    <tui-input-date [(ngModel)]="value">
                        Choose a date
                        <input
                            placeholder="dd.mm.yyyy"
                            tuiTextfieldLegacy
                        />
                    </tui-input-date>
                ",
  "1. After": "
                    <tui-textfield >
<label tuiLabel>
                        Choose a date
                        </label>
<input
                            placeholder="dd.mm.yyyy"
                            tuiInputDate [(ngModel)]="value"
                        />
                    
<tui-calendar *tuiDropdown />
</tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-input-date preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;

exports[`ng-update label on legacy controls tui-input-date-range preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.html 1`] = `
{
  "0. Before": "
                    <tui-input-date-range [(ngModel)]="value">
                        Choose a range
                        <input
                            placeholder="dd.mm.yyyy – dd.mm.yyyy"
                            tuiTextfieldLegacy
                        />
                    </tui-input-date-range>
                ",
  "1. After": "
                    <tui-textfield >
<label tuiLabel>
                        Choose a range
                        </label>
<input
                            placeholder="dd.mm.yyyy – dd.mm.yyyy"
                            tuiInputDateRange [(ngModel)]="value"
                        />
                    
<tui-calendar-range *tuiDropdown />
</tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-input-date-range preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;

exports[`ng-update label on legacy controls tui-input-month preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.html 1`] = `
{
  "0. Before": "
                    <tui-input-month [(ngModel)]="value">
                        Your month
                        <input
                            placeholder="MM.YYYY"
                            tuiTextfieldLegacy
                        />
                    </tui-input-month>
                ",
  "1. After": "
                    <tui-textfield >
<label tuiLabel>
                        Your month
                        </label>
<input
                            placeholder="MM.YYYY"
                            tuiInputMonth [(ngModel)]="value"
                        />
                    
<tui-calendar-month *tuiDropdown />
</tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-input-month preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;

exports[`ng-update label on legacy controls tui-input-password preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.html 1`] = `
{
  "0. Before": "
                    <tui-input-password [(ngModel)]="value">
                        Password
                        <input
                            tuiTextfieldLegacy
                            type="password"
                        />
                    </tui-input-password>
                ",
  "1. After": "
                    <tui-textfield >
<label tuiLabel>
                        Password
                        </label>
<input
                            tuiInput type="password" [(ngModel)]="value"
                            type="password"
                        />
<tui-icon tuiPassword />

                    </tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-input-password preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;

exports[`ng-update label on legacy controls tui-input-phone preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.html 1`] = `
{
  "0. Before": "
                    <tui-input-phone [(ngModel)]="value">
                        Your phone
                        <input
                            placeholder="+7 (___) ___-__-__"
                            tuiTextfieldLegacy
                        />
                    </tui-input-phone>
                ",
  "1. After": "
                    <tui-textfield >
<label tuiLabel>
                        Your phone
                        </label>
<input
                            placeholder="+7 (___) ___-__-__"
                            tuiInputPhone [(ngModel)]="value"
                        />
                    </tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-input-phone preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;

exports[`ng-update label on legacy controls tui-input-phone-international preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.html 1`] = `
{
  "0. Before": "
                    <tui-input-phone-international [(ngModel)]="value">
                        Your phone
                        <input
                            placeholder="+7 000 000-00-00"
                            tuiTextfieldLegacy
                        />
                    </tui-input-phone-international>
                ",
  "1. After": "
                    <tui-textfield >
<label tuiLabel>
                        Your phone
                        </label>
<input
                            placeholder="+7 000 000-00-00"
                            tuiInputPhoneInternational [(ngModel)]="value"
                        />
                    </tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-input-phone-international preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;

exports[`ng-update label on legacy controls tui-input-time preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.html 1`] = `
{
  "0. Before": "
                    <tui-input-time [(ngModel)]="value">
                        Pick a time
                        <input
                            placeholder="hh:mm"
                            tuiTextfieldLegacy
                        />
                    </tui-input-time>
                ",
  "1. After": "
                    <tui-textfield >
<label tuiLabel>
                        Pick a time
                        </label>
<input
                            placeholder="hh:mm"
                            tuiInputTime [(ngModel)]="value"
                        />
                    </tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-input-time preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;

exports[`ng-update label on legacy controls tui-input-year preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.html 1`] = `
{
  "0. Before": "
                    <tui-input-year [(ngModel)]="value">
                        Your year
                        <input
                            placeholder="Not 2022 please"
                            tuiTextfieldLegacy
                        />
                    </tui-input-year>
                ",
  "1. After": "
                    <tui-textfield >
<label tuiLabel>
                        Your year
                        </label>
<input
                            placeholder="Not 2022 please"
                            tuiInputYear [(ngModel)]="value"
                        />
                    
<tui-calendar-year *tuiDropdown />
</tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-input-year preserves plain text label when inner <input tuiTextfieldLegacy> is present: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;

exports[`ng-update label on legacy controls tui-textarea preserves plain text label when inner <textarea tuiTextfieldLegacy> is present: test.html 1`] = `
{
  "0. Before": "
                    <tui-textarea [(ngModel)]="value">
                        Bio
                        <textarea
                            placeholder="Write a few words"
                            tuiTextfieldLegacy
                        ></textarea>
                    </tui-textarea>
                ",
  "1. After": "
                    <!-- TODO: (Taiga UI migration) tui-textarea migration (see https://taiga-ui.dev/components/textarea):
     - Legacy tui-textarea had a fixed height of 20 rows by default. New component auto-resizes between [min] (default: 1) and [max] (default: 3) rows. Set min and max explicitly if the previous layout needs to be preserved.
-->
                    <tui-textfield>
                    <label tuiLabel>Bio</label>
                    <textarea
                            placeholder="Write a few words"
                            tuiTextarea [(ngModel)]="value"></textarea>
                    </tui-textfield>
                ",
}
`;

exports[`ng-update label on legacy controls tui-textarea preserves plain text label when inner <textarea tuiTextfieldLegacy> is present: test.ts 1`] = `
{
  "0. Before": "
            import {Component} from '@angular/core';
            import {TuiInputModule} from '@taiga-ui/legacy';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInputModule],
            })
            export class Test {}
        ",
  "1. After": "import { TuiInput } from "@taiga-ui/core";

            import {Component} from '@angular/core';

            @Component({
                standalone: true,
                templateUrl: './test.html',
                imports: [TuiInput],
            })
            export class Test {}
        ",
}
`;
